--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "vocable",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Vocable exercise tool",
   "main": "index.js",
   "scripts": {
-    "build": "browserify js/ui.js -o build/client.js",
-    "dev": "nodemon --ignore build/ --exec npm run build"
+    "start": "run-p client-dev-server build-server watch-server",
+    "build-client": "webpack --progress --colors --config webpack.config.babel.js",
+    "client-dev-server": "webpack-dev-server --progress --colors",
+    "build-server": "babel src/server --out-dir build/server --watch",
+    "watch-server": "nodemon \"./build/server/server.js\" --watch \"./build/server\""
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nattelog/vocable.git"
   },
+  "keywords": [],
   "author": "Natanael Log <natte.log@gmail.com> (www.natanael.se)",
   "license": "ISC",
   "bugs": {
@@ -18,14 +27,11 @@
   },
   "homepage": "https://github.com/nattelog/vocable#readme",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-browserify": "^5.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-css-import": "^0.1.8",
-    "grunt-merge-data": "^0.4.4",
-    "grunt-task-loader": "^0.6.0"
-  },
-  "dependencies": {
-    "bootstrap": "^3.3.7"
+    "babel-core": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-register": "^6.24.0",
+    "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.2",
+    "webpack": "2.2.1"
   }
 }
