--- a/package.json
+++ b/package.json
@@ -18,12 +18,7 @@
   },
   "homepage": "https://github.com/nattelog/vocable#readme",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-browserify": "^5.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-css-import": "^0.1.8",
-    "grunt-merge-data": "^0.4.4",
-    "grunt-task-loader": "^0.6.0"
+    "webpack": "^2.3.1"
   },
   "dependencies": {
     "bootstrap": "^3.3.7"
